[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pynfogen"
version = "1.1.2"
description = "Scriptable MediaInfo-fed NFO Generator for Movies and TV"
license = "MIT"
authors = ["PHOENiX <rlaphoenix@pm.me>"]
readme = "README.md"
homepage = "https://github.com/rlaphoenix/pynfogen"
repository = "https://github.com/rlaphoenix/pynfogen"
documentation = "https://github.com/rlaphoenix/pynfogen"
keywords = ["python", "nfo", "generator", "scriptable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Video",
]
include = [
    { path = "CHANGELOG.md", format = "sdist" },
    { path = "LICENSE", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pymediainfo = "^6.0.1"
pyd2v = "^1.3.1"
requests = "^2.31.0"
appdirs = "^1.4.4"
click = "^8.1.7"
dunamai = "^1.19.0"
Unidecode = "^1.3.7"
langcodes = { extras = ["data"], version = "^3.3.0" }
jsonpickle = "^3.0.2"
tldextract = "^3.6.0"
click-default-group = "^1.2.4"
cinemagoer = "^2023.5.1"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
types-requests = "^2.31.0.7"
flake8 = "^5.0.4"
isort = "^5.11.5"
pre-commit = "^2.21.0"

[tool.poetry.scripts]
nfo = "pynfogen.cli:cli"

[tool.isort]
line_length = 118  # 120-2 as I don't like imports right at the edge

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
